crates/monitrs-tui/tests/snapshots/view_snapshots__a_long_hostname.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:build-agent-eu-west-1b-really-quite-long-hostname.exa...  [>LIVE]  1s  00:00:23Z --+|
|| CPU   79% [############################=-------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM   71% [#########################=----------]  23G/32G  swap 205M/2.0G  bat 82%-              ||
|+ HISTORY 5m ------------------------------------------------------------------- I/O peak 42M/s ---+|
|| CPU                                                                       :---====+++***###%%%%%#||
|| MEM                                                                       #######################||
|| I/O                                                                       @@@@@@@@@@@@@@@@@@@@@@@||
|| CORE  +#%@+#%@                                                                                   ||
|+ PROCESSES  sort CPU% desc ----------------------------------------------------------- 5 total ---+|
||      PID USER     S   CPU%  MEM%   RSS  READ/s WRITE/s  THR      AGE NAME                        ||
||>   31842 gabor    S   120%  8.1%  2.6G   21M/s   42M/s    4    01:23 rustc                       ||
||     1221 postgres S    54%  3.0%  982M  7.7M/s   15M/s    4    01:23 postgres                    ||
||      507 gabor    S    21%  4.1%  1.3G   10M/s   21M/s    4    01:23 WindowServer                ||
||     9182 gabor    S    12%  1.2%  392M  3.1M/s  6.1M/s    4    01:23 node                        ||
||        1 gabor    S   0.1%  0.1%   32M  256K/s  512K/s    4    01:23 launchd                     ||
||                                                                                                  ||
||                                                                                                  ||
||                                                                                                  ||
||                                                                                                  ||
||                                                                                                  ||
||                                                                                                  ||
||                                                                                                  ||
||                                                                                                  ||
|+ PRESSURE ----------------------------------------------------------------------------- 2 of 8 ---+|
|| . CPU     normal        79% [#################################=---------------------------------]||
|| . MEM     normal        29% [###########################=---------------------------------------]||
|+--------------------------------------------------------------------------------------------------+|
|[1 Overview] 2 Processes  3 CPU  4 Storage  5 Network  6 Inspect                    / filter  ? help|
