crates/monitrs-tui/tests/snapshots/view_snapshots__a_long_hostname_in_a_compact_header.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
assertion_line: 627
expression: "text_of(&frame(&state, ascii()))"
---
|+ monitrs  host:build-agent-eu-west-1b-really-qui...  [>LIVE]  1s  00:00:23Z --+|
| CPU 79%  MEM 71%  load  4.12 3.84 3.21  23G/32G  swap 205M/2.0G                |
|+ PROCESSES  sort CPU% desc --------------------------------------- 5 total ---+|
||      PID USER     S   CPU%  MEM%   RSS  READ/s WRITE/s NAME                  ||
||    31842 gabor    S   120%  8.1%  2.6G   21M/s   42M/s rustc                 ||
||     1221 postgres S    54%  3.0%  982M  7.7M/s   15M/s postgres              ||
||      507 gabor    S    21%  4.1%  1.3G   10M/s   21M/s WindowServer          ||
||     9182 gabor    S    12%  1.2%  392M  3.1M/s  6.1M/s node                  ||
||>       1 gabor    S   0.1%  0.1%   32M  256K/s  512K/s launchd               ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
|+------------------------------------------------------------------------------+|
|[1 Overview] 2 Processes  3 Storage  4 Network  5 Inspect       / filter  ? help|
