crates/monitrs-tui/tests/snapshots/view_snapshots__compact_eighty_by_twenty_four.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------- 00:00:23Z --+|
| CPU 79%  MEM 71%  load  4.12 3.84 3.21  23G/32G  swap 205M/2.0G                |
|+ PROCESSES  sort CPU% desc --------------------------------------- 5 total ---+|
||      PID USER     S   CPU%  MEM%   RSS  READ/s WRITE/s NAME                  ||
||>   31842 gabor    S   120%  8.1%  2.6G   21M/s   42M/s rustc                 ||
||     1221 postgres S    54%  3.0%  982M  7.7M/s   15M/s postgres              ||
||      507 gabor    S    21%  4.1%  1.3G   10M/s   21M/s WindowServer          ||
||     9182 gabor    S    12%  1.2%  392M  3.1M/s  6.1M/s node                  ||
||        1 gabor    S   0.1%  0.1%   32M  256K/s  512K/s launchd               ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
||                                                                              ||
|+------------------------------------------------------------------------------+|
|[1] 2  3  4  5  6  7                                            / filter  ? help|
